k8s/apps/omni-tools/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-tools
  namespace: cwx
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: omni-tools
