k8s/apps/omni-tools/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-tools-route
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`omni.chenwx.top`)
      kind: Rule
      services:
        - name: omni-tools
          namespace: cwx
          port: 80
